[gd_scene load_steps=2 format=3 uid="uid://xuidekg6lsgo"]

[ext_resource type="Script" uid="uid://cxwnunsqdft7r" path="res://level_select.gd" id="1_il3u1"]

[node name="LevelSelect" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_il3u1")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "- Choose Your Level -"

[node name="Tutorial" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Tutorial Level"

[node name="Spike" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Spike Level"

[node name="Crumble" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Crumble Level"

[node name="Cursed" type="CheckBox" parent="."]
layout_mode = 0
offset_right = 24.0
offset_bottom = 24.0
text = "Cursed"

[connection signal="pressed" from="VBoxContainer/Tutorial" to="." method="_on_tutorial_pressed"]
[connection signal="pressed" from="VBoxContainer/Spike" to="." method="_on_spike_pressed"]
[connection signal="pressed" from="VBoxContainer/Crumble" to="." method="_on_crumble_pressed"]
[connection signal="toggled" from="Cursed" to="." method="_on_cursed_toggled"]
